--- a/Technology/Driver-Jenson.html
+++ b/Technology/Driver-Jenson.html
@@ -1,5 +1,5 @@
 <html>
-<body style="background: transparent url(Driver-Jenson.png) -40px 20px no-repeat; background-size: 65%; color: white; font-family: Helvetica; padding-left: 53%; padding-top: 20px; font-size: 11px;">
+<body style="background: transparent url(Driver-Jenson@2x.png) -40px 20px no-repeat; background-size: 65%; color: white; font-family: Helvetica; padding-left: 53%; padding-top: 20px; font-size: 11px;">
     <h1 style="text-transform: uppercase; font-style: oblique; line-height: 20px;">Jenson<br />Button</h1>
     <p style="font-size: 12px;">Nationality: <b>British</b><br />
     Born: <b>Frome, Somerset</b><br />
