--- a/Technology/Driver-Lewis.html
+++ b/Technology/Driver-Lewis.html
@@ -1,6 +1,6 @@
 <html>
 <body style="background: transparent url(Driver-Lewis@2x.png) -40px 20px no-repeat; background-size: 65%; color: white; font-family: Helvetica; padding-left: 53%; padding-top: 20px; font-size: 11px;">
-    <h1 style="text-transform: uppercase; font-style: oblique; line-height: 20px;">Lewis<br />Hamilton</h1>
+    <h1 style="text-transform: uppercase; font-family: 'HelveticaNeueLTStd-HvCnO'; line-height: 20px;">Lewis<br />Hamilton</h1>
     <p style="font-size: 12px;">Nationality: <b>British</b><br />
     Born: <b>Stevenage, U.K.</b><br />
     Height: <b>1.74m</b><br />
