Updated driver description

--- a/Technology/Driver-Lewis.html
+++ b/Technology/Driver-Lewis.html
@@ -7,6 +7,6 @@
     D.O.B: <b>07/01/1985</b><br />
     Resident: <b>Switzerland</b><br />
     Hobbies: <b>Playing the guitar and training</b></p>
-    <p>"ExxonMobil’s supreme expertise in lubricants makes a crucial difference to performance when you’re racing at 340km/h: they can make the difference between winning and merely competing."</p>
+    <p>Lewis Hamilton has been winning races ever since he was big enough to reach the pedals. He won his first British Karting Championship at the age of 10, and famously introduced himself to McLaren Group CEO Ron Dennis at the annual Autosport Awards, proclaiming, “I’m going to drive for you one day.”</p>
 </body>
 </html>
